fix: fix gbed-nav so that drop-shadow isn't cut off.

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -207,26 +207,20 @@
   width: 100%;
   z-index: 2;
   position: relative;
-  // bottom: 0;
-  
-  padding-top: $sp-2;
-  padding-bottom: $sp-3;
-  // margin-bottom: 0px;
   overflow-x: auto;
-  
   user-select: none;
 
   .gbed-nav-list {
     display: flex;
-    // margin: $sp-4;
     list-style: none;
   }
 
   .gbed-list-item {
     display: inline-block;
-    // margin-top: 0;
     margin-right: $sp-2;
     margin-left: $sp-2;
+    padding-top: $sp-4;
+    padding-bottom: $sp-8;
     transition: all .2s ease-in-out;
   
       + .active {
